# t8code

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .typos.toml  AUTHORS  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPackConfig.cmake  Doxyfile.in  INSTALL  JOSS_README.txt  Makefile.am  Makefile.in  Makefile.t8.pre.in  NEWS.md  README  README.md  TODO  archives.html  authors.html  bootstrap  categories.html  christmas-greetings-2023.html  christmas-greetings.html  configure.ac  dependencies.json  dummy.txt  hello-world.html  index.html  index2.html  pull_request_template.md  run.sh  sitemap.xml  t8_fortran_specific.mk  t8code-100-released.html  (+10 more)
JOSS/: LICENSE  (+3 more)
api/: Makefile.am  README.md
api/t8_fortran_interface/: CMakeLists.txt  Makefile.am  t8_fortran_example_adapt_mod.f90  t8_fortran_interface.c  t8_fortran_interface.f90  t8_fortran_interface.h  t8_fortran_interface_mod.f90  t8_fortran_specific.mk  t8_mo_fortran_interface.f90
api/t8_mesh_handle/: CMakeLists.txt  README.md  abstract_element.hxx  competence_pack.hxx  competences.hxx  element.hxx  ghost.hxx  ghost_element.hxx  mesh.cxx  mesh.hxx  mesh_element.hxx
api/t8_mesh_interface/: CMakeLists.txt  README.md  t8_interface_competences.hxx  t8_interface_element.hxx  t8_interface_mesh.cxx  t8_interface_mesh.hxx
api/t8_unstructured_mesh/: CMakeLists.txt  README.md  t8_element_competences.hxx  t8_unstructured_element.hxx  t8_unstructured_mesh.cxx
benchmarks/: CMakeLists.txt  Makefile.am  README.md  benchmark.cxx  benchmark_crtp.hxx  benchmark_virtual.hxx  search_benchmark.txt  search_benchmark_runscript.py  t8_time_carved_ball.cxx  t8_time_carved_balls.cxx  t8_time_elements.cxx  t8_time_forest_partition.cxx  t8_time_fractal.cxx  t8_time_fractal_ghost.cxx  t8_time_menger.cxx  t8_time_new_compare.cxx  t8_time_new_refine.c  t8_time_partition.cxx  t8_time_prism_adapt.cxx  t8_time_search.cxx  t8_time_set_join_by_vertices.cxx  t8_time_sierpinski_tetrahedron.cxx  t8_time_sierpinski_triangle.cxx  t8_time_sponge.cxx  test.cxx  time_forest_partition.cxx  time_new.c  time_new_refine.c  time_partition.c  time_partition.cxx  time_refine_type03.c
benchmarks/ExtremeScaling/: Makefile.am  bunny.cxx
doc/: CMakeLists.txt  Doxyfile.in  author_ackerschott.txt  author_albers.txt  author_andreev.txt  author_austin.txt  author_becker.txt  author_boeing.txt  author_brandt.txt  author_csati.txt  author_doehring.txt  author_dreyer.txt  author_dutka.txt  author_flatken.txt  author_fussbroich.txt  author_geihe.txt  author_goldberg.txt  author_henricpetri.txt  author_hergl.txt  author_holke.txt  author_homsani.txt  author_hördt.txt  author_karembe.txt  author_kestener.txt  author_kirby.txt  author_knapp.txt  author_lampert.txt  author_leistikow  author_lilikakis.txt  author_markert.txt  author_martone.txt  author_mishra.txt  author_nguyenxuan.txt  author_ploetzke.txt  author_ponnusamy.txt  author_radmer.txt  author_ranocha.txt  author_schlottke-lakemper.txt  author_schmitt.txt  author_schoenlein.txt  (+11 more)
doc/cmake_examples/: CMakeLists.txt.in
doc/dev/: annotated.html  classT8Type.html  classes.html  classt8__abstract__vector__handler.html  classt8__cad.html  classt8__cmesh__vertex__conn__tree__to__vertex.html  classt8__cmesh__vertex__conn__vertex__to__tree.html  classt8__crtp.html  classt8__data__handler.html  classt8__default__scheme__common.html  classt8__default__scheme__common__c.html  classt8__default__scheme__hex.html  classt8__default__scheme__line.html  classt8__default__scheme__prism.html  classt8__default__scheme__pyramid.html  classt8__default__scheme__quad.html  classt8__default__scheme__tet.html  classt8__default__scheme__tri.html  classt8__default__scheme__vertex.html  classt8__element__array__iterator.html  classt8__lagrange__element.html  classt8__partition__search.html  classt8__partition__search__base.html  (+580 more)
example/: CMakeLists.txt  Makefile.am  README  README.md  face_neighbor.cxx
p4est/: Makefile.am  README.md  p4est_base.c  p4est_base.h  p4est_bits.c  p4est_extended.h  p8est_extended.h
src/: CMakeLists.txt  Makefile.am  README.md  config.cmake.in  pre_config.h.in  pre_config.h.in~  t8.c  t8.h  t8_cmesh.c  t8_cmesh.h  t8_cmesh.hxx  t8_cmesh_netcdf.h  t8_cmesh_readmshfile.h  t8_cmesh_tetgen.h  t8_cmesh_triangle.h  t8_cmesh_vtk.h  t8_cmesh_vtk_reader.hxx  t8_cmesh_vtk_writer.h  t8_config.h.in  t8_default.h  t8_default_cxx.hxx  t8_eclass.c  t8_eclass.h  t8_element.c  t8_element.cxx  t8_element.h  t8_element.hxx  t8_element_c_interface.cxx  t8_element_c_interface.h  t8_element_cxx.c  t8_element_cxx.cxx  t8_element_cxx.h  t8_element_cxx.hxx  t8_element_hex.c  t8_element_hex.h  t8_element_quad.c  t8_element_quad.h  t8_element_shape.c  t8_element_shape.h  t8_element_tet.c  (+41 more)
test/: CMakeLists.txt  Makefile.am  README.md  mwe.cxx  t8_gtest_adapt_callbacks.cxx  t8_gtest_adapt_callbacks.hxx  t8_gtest_basics.cxx  t8_gtest_bcast.cxx  t8_gtest_cad_linkage.cxx  t8_gtest_custom_assertion.hxx  t8_gtest_eclass.cxx  t8_gtest_geometry_occ.cxx  t8_gtest_macros.cxx  t8_gtest_macros.hxx  t8_gtest_main.cxx  t8_gtest_mat.cxx  t8_gtest_memory_macros.cxx  t8_gtest_memory_macros.hxx  t8_gtest_nca.cxx  t8_gtest_netcdf_linkage.cxx  t8_gtest_occ_linkage.cxx  t8_gtest_projection_matrices.cxx  t8_gtest_refcount.cxx  t8_gtest_scheme_consistency.cxx  t8_gtest_schemes.hxx  t8_gtest_transformation_matrices.cxx  t8_gtest_vec.cxx  t8_gtest_version.cxx  t8_gtest_version_number.cxx  t8_gtest_vtk_linkage.cxx  t8_test_bcast.c  t8_test_cmesh_copy.c  t8_test_cmesh_face_is_boundary.cxx  t8_test_cmesh_partition.c  t8_test_cmesh_partition.cxx  t8_test_cmesh_readmshfile.c  t8_test_data_dir.h.in  t8_test_descendant.cxx  t8_test_eclass.c  t8_test_element_count_leafs.cxx  (+29 more)
tutorials/: CMakeLists.txt  Makefile.am  README.md  t8_step1_coarsemesh.c  t8_step3.h  t8_step3_1_adapt_forest_pras.cxx  t8_step3_adapt_forest.cxx  t8_step3_main.cxx  t8_step4.h  t8_step4_main.cxx  t8_step4_partition_balance_ghost.cxx  t8_step5_element_data.cxx  t8_step5_element_data_c_interface.c  t8_step5_main.cxx  t8_tutorial_search.cxx
(+6660 files in other folders)
